--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: backend
   namespace: fullstack-app
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: backend
@@ -17,7 +17,7 @@ spec:
         - name: backend
           image: kusalthiwanka/backend-node:latest
           ports:
-            - containerPort: 5000
+            - containerPort: 5000 # Updated port
           envFrom:
             - configMapRef:
                 name: app-config
@@ -32,6 +32,7 @@ spec:
     app: backend
   ports:
     - protocol: TCP
-      port: 5000
-      targetPort: 5000
+      port: 5000 # Updated port
+      targetPort: 5000 # Updated port
   clusterIP: None
+  
